[gd_scene format=3 uid="uid://bc33e4giav80o"]

[ext_resource type="Script" uid="uid://ydla5h6kvo07" path="res://script/ui/hud.gd" id="1_0mwgc"]
[ext_resource type="Texture2D" uid="uid://jwu863cdhfm" path="res://assets/hud/icon/Q.png" id="2_hqnrr"]
[ext_resource type="Texture2D" uid="uid://blyic1n3ib5pk" path="res://assets/hud/icon/D.png" id="3_bo48s"]
[ext_resource type="Texture2D" uid="uid://bhxv2tuy6wnyn" path="res://assets/hud/icon/Z.png" id="4_8qguk"]
[ext_resource type="Texture2D" uid="uid://b80y8p185l4uv" path="res://assets/hud/icon/batte_hud.png" id="5_oj5la"]
[ext_resource type="Texture2D" uid="uid://cvpf2bfrl5g8w" path="res://assets/hud/icon/gant_boxe_hud.png" id="6_gss2c"]
[ext_resource type="Texture2D" uid="uid://c5bgtk0exvwb1" path="res://assets/hud/icon/coeur_vie_joueur.png" id="7_gss2c"]

[node name="Hud" type="CanvasLayer" unique_id=617686044]
script = ExtResource("1_0mwgc")

[node name="Control" type="Control" parent="." unique_id=1091046936]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Control" unique_id=1817310336]
layout_mode = 1
offset_left = 55.0
offset_top = 35.999996
offset_right = 95.0
offset_bottom = 58.999996
scale = Vector2(2.3105013, 1.8800001)

[node name="ScoreLabel" type="Label" parent="Control" unique_id=1375036341]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_top = 34.0
offset_right = -17.0
offset_bottom = 57.0
grow_horizontal = 2
scale = Vector2(2.99978, 1.9943122)
horizontal_alignment = 1

[node name="ControlsHUD" type="Control" parent="." unique_id=201034255]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Q" type="TextureRect" parent="ControlsHUD" unique_id=46706928]
layout_mode = 0
offset_left = 60.0
offset_top = 898.0
offset_right = 572.0
offset_bottom = 1410.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_hqnrr")

[node name="D" type="TextureRect" parent="ControlsHUD" unique_id=1538826287]
layout_mode = 0
offset_left = 233.0
offset_top = 898.0
offset_right = 745.0
offset_bottom = 1410.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_bo48s")

[node name="Z" type="TextureRect" parent="ControlsHUD" unique_id=1565090485]
layout_mode = 0
offset_left = 138.0
offset_top = 814.0
offset_right = 650.0
offset_bottom = 1326.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_8qguk")

[node name="bat" type="TextureRect" parent="ControlsHUD" unique_id=1786296216]
layout_mode = 0
offset_left = 1449.3
offset_top = 829.0
offset_right = 1961.3
offset_bottom = 1341.0004
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_oj5la")

[node name="boxing_gloves" type="TextureRect" parent="ControlsHUD" unique_id=1500822689]
layout_mode = 0
offset_left = 1676.8
offset_top = 828.0
offset_right = 2188.8008
offset_bottom = 1340.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_gss2c")

[node name="HealthHUD" type="Control" parent="." unique_id=218947086]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="HealthHUD" unique_id=1698687923]
layout_mode = 0
offset_left = 47.0
offset_top = -83.0
offset_right = 559.0
offset_bottom = 429.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_gss2c")

[node name="Label" type="Label" parent="HealthHUD" unique_id=1504469661]
layout_mode = 0
offset_left = 182.0
offset_top = 68.0
offset_right = 340.0
offset_bottom = 140.0
text = "100
"
